<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Graph Digitalizer Lite</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="take_picture">Take picture</string>
    <string name="load_picture">Load picture</string>
    <string name="loadPhoto">Wczytaj zdjęcie</string>
    <string name="preprocesing_label">Wstępna obróbka</string>
    <string name="original">Oryginał</string>
    <string name="processed">Przetworzony</string>
    <string name="manage_filters">Zarządzaj filtrami</string>
    <string name="remove_effect">Usuń efekt</string>
    <string name="add_effect">Dodaj efekt</string>
    <string name="save_and_back">Zatwierdź i wróć</string>
    <string name="select_effect">Wybierz efekt</string>
    <string name="set_new_value">Nadaj nową wartość</string>
    <string name="sigma">Wartość sigmy</string>
    <string name="done">Zakończone</string>
    <string name="neighbourhood">Wielkość sąsiedztwa</string>
    <string name="prepare_settings">Dokonaj ustawień</string>
    <string name="save">Zapisz</string>

</resources>
