<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <listviewdragginganimation.DynamicListView
        android:id="@+id/effects_list"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/remove_effect_button"
            android:layout_weight="1"
            android:text="@string/remove_effect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/add_effect_button"
            android:layout_weight="1"
            android:text="@string/add_effect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/apply_button"
        android:text="@string/save_and_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>