<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ImageView
                android:layout_weight="1"
                android:id="@+id/original_image"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
            <TextView
                android:text="@string/original"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ImageView
                android:id="@+id/result_image"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
            <TextView
                android:text="@string/processed"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/modify_effects_button"
        android:src="@drawable/ic_action_edit"
        android:layout_width="fill_parent"
        android:contentDescription="@string/manage_filters"
        android:layout_height="wrap_content" />

</LinearLayout>